--- a/build.gradle
+++ b/build.gradle
@@ -273,7 +273,7 @@ def versions = [
         springSecurity      : '5.7.5'
 ]
 
-ext['spring-framework.version'] = '5.3.12'
+ext['spring-framework.version'] = '5.3.26'
 
 configurations.all {
     resolutionStrategy {
@@ -311,7 +311,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.5'
 
-    implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
+    /*implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
@@ -320,7 +320,7 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
-    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
+    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework*/
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
