--- a/build.gradle
+++ b/build.gradle
@@ -309,7 +309,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.5'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
     /*implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
