--- a/build.gradle
+++ b/build.gradle
@@ -321,6 +321,8 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
     testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework*/
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.7'
+
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
