--- a/build.gradle
+++ b/build.gradle
@@ -321,6 +321,7 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
     testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework*/
+    implementation group: 'org.springframework', name:'spring-core',version: '6.0.7'
     testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.7'
 
 
