--- a/build.gradle
+++ b/build.gradle
@@ -311,7 +311,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-    implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
+    /*implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
@@ -320,7 +320,11 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
-    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
+    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework*/
+    implementation group: 'org.springframework', name:'spring-beans', version:'6.0.7'
+    implementation group: 'org.springframework', name:'spring-core',version: '6.0.7'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.7'
+
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
