--- a/build.gradle
+++ b/build.gradle
@@ -321,9 +321,9 @@ dependencies {
     implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
     testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework*/
-    implementation group: 'org.springframework', name:'spring-beans', version:'6.0.7'
-    implementation group: 'org.springframework', name:'spring-core',version: '6.0.7'
-    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.7'
+    implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
+    implementation group: 'org.springframework', name:'spring-core',version: versions.springFramework
+    testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
 
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
