--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 }
 
 plugins {
+    id 'java-library'
     id 'application'
     id 'checkstyle'
     id 'pmd'
@@ -300,7 +301,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging'
+    //implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
     testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
@@ -324,7 +325,10 @@ dependencies {
     implementation group: 'commons-net', name: 'commons-net', version: '3.9.0'
 
     implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version:'0.1.1', withoutSpringCloudContext
-    //implementation group: 'com.github.hmcts', name: 'java-logging', version: versions.logging
+    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '5.1.9'
+
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.5'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.5'
 
     implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.0'
     implementation group: 'com.github.hmcts', name: 'ccd-client', version: 'v4.9.1'
@@ -343,13 +347,22 @@ dependencies {
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.8'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
-    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.4.11'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-reactor-netty'
+    implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.4.11'
 
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
+    //testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
+    //testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
+    //testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
+
+    testImplementation(platform(group: 'org.junit', name: 'junit-bom', version: '5.9.2'))
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
+        exclude group: 'junit', module: 'junit'
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
 
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.0'
